# private-chat-hub-tauri

./: .gitignore  README.md  UX_ANALYSIS_OPENCODE_LMSTUDIO.md  UX_DESIGN_INDEX.md  UX_IMPLEMENTATION_CHECKLIST.md  UX_SUMMARY.md  index.html  package.json  pnpm-lock.yaml
.devcontainer/: devcontainer.json  post-create.sh
.github/: dependabot.yml
.github/agents/: architect.md  developer.md  product-owner.md  qa.md  ux-designer.md
.github/workflows/: build-cross-platform.yml  codeql.yml  release.yml
docs/: ARCHITECTURE_CLOUD_API_INTEGRATION.md  ARCHITECTURE_DECISIONS.md  ARCHITECTURE_LOCAL_REMOTE_MODEL_SYSTEM.md  ARCHITECTURE_V2.md  JINA_INTEGRATION_SPEC.md  PRODUCT_REQUIREMENTS.md  PRODUCT_REQUIREMENTS_V1.5.md  PRODUCT_ROADMAP_V2.md  PRODUCT_VISION.md  REQUIREMENTS_V2.md  STRATEGIC_REFOCUS_V1.5.md  USER_STORIES_V2.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  folder_sync.rs  lib.rs  lm_studio.rs  main.rs  models.rs  ollama.rs  opencode.rs  sync_server.rs
src/components/chat/: ChatView.tsx
src/components/comparison/: ComparisonView.tsx
src/components/models/: ModelsView.tsx
src/components/projects/: ProjectsView.tsx
src/components/settings/: SettingsView.tsx
src/components/sidebar/: Sidebar.tsx
src/stores/: index.ts
src/types/: index.ts
src/utils/: format.ts
