[package]
name = "private-chat-hub-desktop"
version = "0.1.0"
description = "Universal AI Chat Platform for Desktop - Privacy-first chat with local, self-hosted, and cloud AI models"
authors = ["cmwen"]
edition = "2021"

[package.metadata.winres]
ProductName = "Private Chat Hub"
FileDescription = "Private Chat Hub Desktop"
OriginalFilename = "Private Chat Hub.exe"

[lib]
name = "private_chat_hub_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
base64 = "0.22"
axum = "0.8"
local-ip-address = "0.6"
